<resources>
    <string name="app_name">Maps</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_bottom">Bottom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Stadium">Stadium</string>
    <string name="Dost">Places</string>
    <string name="Map">Map</string>
    <string name="test">Test</string>

    <string name="Metro_Stadium">В час пик (8:00-10:00 и 17:00-19:00), чтобы попасть из одной части города в другую метрополитен может стать хорошей альтернативой автомобильным мостам. Также метро может пригодиться, чтобы добраться в центр города из аэропорта или в обратном направлении. До конца 2017 года международный аэропорт «Стригино» и станцию метро «Парк Культуры» — конечную станцию автозаводской линии — соединит обновленная автострада — проспект Молодежный. Время в пути от станции метро «Парк Культуры» до станций метро «Горьковской» или «Стрелки» (необходима пересадка на «Москвоской») составит около 30 минут.</string>
    <string name="Transp_card"><b>Транспортная карта</b>

Стоимость проезда в автобусе, маршрутке, троллейбусе и трамвае — 28 рублей.  Оплачивать поездки на нижегородском метро, в автобусе, троллейбусе и трамвае можно транспортными картами «Ситикард». Тогда стоимость проезда составит 26 рублей, и у вас появиться право бесплатных пересадок на муниципальном транспорте в течение 60 минут с момента регистрации первой поездки. Существует тариф, по которому бесплатные пересадки возможны в течение 90 минут. Стоимость проезда при оплате по карте по данному тарифу составит 40 рублей.</string>
    <string name="Obiezd">В дни проведения  матчей Чемпионата мира по футболу FIFA 2018TM  на «Стадионе Нижний Новгород» (18 июня, 21 июня, 24 июня, 27 июня, 1 июля, 6 июля 2018 года) в Канавинском районе будут введены временные ограничения для въезда коммерческого и личного транспорта на следующие улицы. Подробности отражены на карте.</string>

    <string name="Kremlin">1. Неприступный форт XVI века в центральной части Нижнего Новгорода, который не удавалось взять никому. До наших дней дошли 13 башен и крепостная стена более двух километров длиной. Толщина стены у основания доходит до 5 метров, за крепостной оградой располагаются резиденции городских и региональных властей. В башнях Кремля размещены выставочные экспозиции, для посещения туристами открыт участок стены.</string>
    <string name="Chkalov">2. Чкаловская лестница
        Лестница, насчитывающая более 500 ступеней, которая ведет от набережной Волги до площади Минина и Пожарского. Сооружение построили в честь победы в битве под Сталинградом. Работы были завершены в 1949 году. Лестница выглядит как гигантская цифра «8». Благодаря монументальным размерам, ее отлично видно с противоположного берега реки. На вершине установлен монумент летчику В. Чкалову.</string>
    <string name="Fedorovskogo">3. Набережная Федоровского
        Обустроенная прогулочная набережная, откуда открывается великолепный вид на реку Оку, Канавинский мост и Строгановскую церковь. Это одна из лучших городских обзорных площадок. На набережной установлен памятник Максиму Горькому. Место давно облюбовали молодожены, здесь постоянно устраивают фотосессии и запускают голубей. Любой человек может найти покой и уединение среди аллей набережной.</string>
    <string name="Pokra">4. Улица Большая Покровская
Главная улица Нижнего Новгорода, застроенная дворянскими особняками прошлых столетий. Немалая часть Большой Покровской отведена под пешеходную зону. Здесь находится много интересных достопримечательностей: Верхне-Посадские торговые палаты, драматический и кукольный театры, Дом профсоюзов. Улица стала главной городской аллеей в XVIII веке. Сначала здесь прогуливались только представители дворянских семей.</string>
    <string name="Novoyarmor">5. Александро-Невский Новоярмарочный собор
Храм XIX столетия, воздвигнутый на месте проведения Нижегородской ярмарки на средства купечества. Торговцы хотели увековечить этим визит императора Александра II. В советский период храм был запущен и лишен всех своих ценностей. Внутреннее убранство окончательно уничтожил пожар. Восстановительные работы были начаты в 1983 году, через 10 лет здание вернули Церкви. В 2009 году собор получил статус кафедрального.</string>
    <string name="Rozhdestvenskaya">6. Рождественская (Строгановская) церковь
Нарядный храм, который носит имя известного российского промышленника Григория Строганова (именно на его средства велось строительство). Внешним украшением церкви является изящная белокаменная резьба, которая выгодно смотрится на фоне стен из красного кирпича. В храме была проведена капитальная реставрация в 1913 году. Церкви удалось избежать разрушения во времена СССР, так как ее настоятель смог доказать новой власти историческую ценность здания.</string>
    <string name="ChurchOfChristmas">7. Церковь Рождества Иоанна Предтечи на Торгу
Церковь XVI века, знаменитая тем, что с ее ступеней Кузьма Минин призывал местных жителей организоваться и двинуться на освобождение Москвы (это было в Смутное время). Сначала на месте церкви стояла деревянная постройка, посвященная будущему наследнику царя Василия III. Позже церковь перестроили из камня, так как деревянное здание было подвержено пожарам. Внутри хранятся святые мощи Николая Чудотворца и Иоанна Крестителя.</string>
    <string name="PecherskiyMonastir">8. Печерский Вознесенский монастырь
Мужской монастырь на берегу Волги, основанный в XIV веке монахом из Киево-Печорской Лавры. В Средние века считался важным духовным центром Православия в Поволжье. В XVI веке в результате сильного оползня обитель была разрушена, однако монахи успели спасти церковные ценности и имущество. Монастырь перенесли вверх по течению реки. Дошедший до нас архитектурный комплекс – это постройки XVII столетия.</string>
    <string name="FairHouse">9. Главный Ярмарочный дом
Уникальное здание, украшающее центральную часть Нижнего Новгорода, где долгие годы проводилась крупнейшая в Российской империи Нижегородская ярмарка. После пожара 1816 года лично император распорядился направить средства на восстановление Ярмарочного дома. Деньги были «оторваны» от реставрации Зимнего дворца. Здание является памятником истории государственного масштаба.</string>
    <string name="GosBank">10. Здание Государственного банка
Причудливое сооружение начала XX века в стиле, который принято называть «неорусский». Оно было возведено к 300-летию правления Романовых. Здесь даже бывал император Николай II. Внутренние интерьеры выполнены в дворцовом императорском стиле, как это было принято в позднюю царскую эпоху. Здание дошло до наших дней в сохранности и используется как банковский офис.</string>
    <string name="TheatreDrama">11. Нижегородский театр драмы
Городской академический театр конца XVIII столетия, один из старейших в России. Первый спектакль для широкой публики был поставлен по произведению Д. Фонвизина. Сначала в труппе играли крепостные крестьяне. Первое здание не отличалось изяществом, и современники описывали его как «мрачное и неуклюжее строение». Однако в результате многочисленных перестроек театр приобрел привлекательный вид.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
